--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo"><img src="assets/images/logo.png" width="700" alt="ロゴ"></div>
+        <div class="header__logo"><img src="assets/images/logo_border.png" width="700" alt="ロゴ"></div>
         </div>
       </header>
     <p class="text-center-large back_center">お絵描き神経衰弱とは...</p>
