--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </ol>
     <p class="text-center-large back_center">動画</p>
     <movies class="movie">
-        <div class="movies"><movies src="assets/images/movie.mp4" alt="動画"></div>
+        <div class="movies"><video controls src="assets/images/movie.mp4" alt="動画"></div>
     </div>
     <p class="text-center-large back_center">お題カード(例)</p>
     <images class="example">
